# whisper-webui-mlx

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.agent/: BLOCKED.md  PROJECT.md  judge.md  judge_feedback.md  last_judge.txt  last_planner.txt  plan.md  planner.md  progress.md  queue.md  state.md  worker.md  worker_report.md
.agent/logs/: judge_1.err  judge_1.out  judge_12.err  judge_2.err  judge_2.out  judge_3.err  judge_3.out  judge_4.err  judge_4.out  judge_5.err  judge_5.out  judge_6.err  judge_7.err  judge_7.out  judge_8.err  judge_8.out  judge_9.err  planner_1.err  planner_1.out  planner_12.err  planner_12.out  planner_2.err  planner_2.out  planner_3.err  planner_3.out  planner_4.err  planner_4.out  planner_5.err  planner_5.out  planner_6.err  planner_6.out  planner_8.err  planner_8.out  planner_9.err  planner_9.out  worker_1.err  worker_1.out  worker_12.err  worker_12.out  worker_2.err  (+13 more)
docs/: business_description.md  dev.md  rfc_history_delete.md  rfc_settings_tab.md  spec.md  tree.md
mlx_ui/: app.py  db.py  logging_config.py  transcriber.py  update_check.py  worker.py
mlx_ui/templates/: index.html
scripts/: build_macos_app.sh  codex_loop_3phase.sh  install.sh  setup_and_run.sh  status.sh
tests/: test_app.py  test_db_migration.py  test_queue_controls.py  test_settings_api.py  test_telegram.py  test_transcriber.py  test_update_check.py  test_worker.py
